--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "angular2-fontawesome": "^0.9.3",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "intersection-observer": "^0.5.0",
     "milligram": "^1.3.0",
+    "ng-in-viewport": "^1.2.0",
     "ngx-cookie": "^2.0.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.19"
