--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "@nicky-lenaers/ngx-scroll-to": "^0.6.0",
     "angular2-fontawesome": "^0.9.3",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "intersection-observer": "^0.5.0",
+    "jquery": "^3.3.1",
     "milligram": "^1.3.0",
     "ng-in-viewport": "^1.2.0",
     "ngx-cookie": "^2.0.1",
